feat: pool trade script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "ethers": "^5.0.8"
+    "ethers": "^5.0.8",
+    "mathjs": "^7.3.0"
   }
 }
