--- a/config
+++ b/config
@@ -19,12 +19,12 @@ export LIQUIDATIONS=`cat $ADDRS | jq -r '.Liquidations'`
 export TREASURY=`cat $ADDRS | jq -r '.Treasury'`
 export CONTROLLER=`cat $ADDRS | jq -r '.Controller'`
 
-export YDAI0=`cat $ADDRS | jq -r '.yDai0'`
-export YDAI1=`cat $ADDRS | jq -r '.yDai1'`
-export YDAI2=`cat $ADDRS | jq -r '.yDai2'`
-export YDAI3=`cat $ADDRS | jq -r '.yDai3'`
+export FYDAI0=`cat $ADDRS | jq -r '.fyDai0'`
+export FYDAI1=`cat $ADDRS | jq -r '.fyDai1'`
+export FYDAI2=`cat $ADDRS | jq -r '.fyDai2'`
+export FYDAI3=`cat $ADDRS | jq -r '.fyDai3'`
 
-export POOL0=`cat $ADDRS | jq -r '.["yDai-t0-Pool"]'`
-export POOL1=`cat $ADDRS | jq -r '.["yDai-t1-Pool"]'`
-export POOL2=`cat $ADDRS | jq -r '.["yDai-t2-Pool"]'`
-export POOL3=`cat $ADDRS | jq -r '.["yDai-t3-Pool"]'`
+export POOL0=`cat $ADDRS | jq -r '.["fyDai-t0-Pool"]'`
+export POOL1=`cat $ADDRS | jq -r '.["fyDai-t1-Pool"]'`
+export POOL2=`cat $ADDRS | jq -r '.["fyDai-t2-Pool"]'`
+export POOL3=`cat $ADDRS | jq -r '.["fyDai-t3-Pool"]'`
