--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Node
 node_modules/
+
+# Temp & IDE files
+.vscode/
+*~
+*.swp
+*.swo
+
+# Secrets
+.infuraKey*
+.secret*
+
+# Yarn
+yarn-error.log
+
+# NPM
+package-lock.json
